update the deploy yaml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,14 +19,13 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --no-dev --optimize-autoloader
 
-      - name: Copy files to EC2
-        uses: appleboy/scp-action@v0.1.5
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          source: "."
-          target: "/var/www/mysite"
+      - name: Rsync files to EC2
+        run: |
+          rsync -avz --delete \
+            --exclude 'web/sites/default/files' \
+            --exclude '.git' \
+            --exclude 'node_modules' \
+            ./ ubuntu@${{ secrets.EC2_HOST }}:/var/www/mysite
 
       - name: Run deployment commands on EC2
         uses: appleboy/ssh-action@v0.1.7
