--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,13 @@ jobs:
 
       - name: Rsync files to EC2
         run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
           rsync -avz --delete \
             --exclude 'web/sites/default/files' \
             --exclude '.git' \
             --exclude 'node_modules' \
+            -e "ssh -i ${{ secrets.EC2_SSH_KEY }}" \
             ./ ubuntu@${{ secrets.EC2_HOST }}:/var/www/mysite
 
       - name: Run deployment commands on EC2
