--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
           rsync -avz --delete \
           --exclude 'web/sites/default/files' \
           --exclude '.git' \
+          --exclude '.env' \
           --exclude 'node_modules' \
           -e "ssh -i ~/.ssh/id_rsa" \
           ./ ubuntu@${{ secrets.EC2_HOST }}:/var/www/mysite
