--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
           rsync -avz --delete \
-
+          --exclude 'web/sites/default/files' \
           --exclude '.git' \
           --exclude '.env' \
           --exclude 'node_modules' \
@@ -48,9 +48,11 @@ jobs:
             composer install --no-dev --optimize-autoloader
             sudo mkdir -p web/sites/default/files/css \
                          web/sites/default/files/js \
-                         web/sites/default/files/php
+                         web/sites/default/files/php \
+                         web/sites/default/files/temp
             sudo chown -R www-data:www-data web/sites/default/files
             sudo chmod -R 775 web/sites/default/files
+            vendor/bin/drush config:set system.file path.temporary sites/default/files/temp -y
             vendor/bin/drush updatedb -y --uri=default
             vendor/bin/drush config:import -y --uri=default
             vendor/bin/drush cache:rebuild -y --uri=default
