changed setting prod env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,13 +46,17 @@ jobs:
           script: |
             cd /var/www/mysite
             composer install --no-dev --optimize-autoloader
-            sudo mkdir -p web/sites/default/files/css \
-                         web/sites/default/files/js \
-                         web/sites/default/files/php \
-                         web/sites/default/files/temp
+
+            # Ensure writable temp dir
+            sudo mkdir -p web/sites/default/files/temp
+
+            # Fix permissions
             sudo chown -R www-data:www-data web/sites/default/files
-            sudo chmod -R 775 web/sites/default/files
+            sudo find web/sites/default/files -type d -exec chmod 775 {} \;
+            sudo find web/sites/default/files -type f -exec chmod 664 {} \;
+
+            # Drupal tasks
             vendor/bin/drush config:set system.file path.temporary sites/default/files/temp -y
             vendor/bin/drush updatedb -y
-            vendor/bin/drush config:import -y
+            vendor/bin/drush config:import -y || echo "No config import."
             vendor/bin/drush cache:rebuild -y
