--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,5 +64,9 @@ jobs:
             # Drupal tasks (as www-data for safety)
             sudo -u www-data vendor/bin/drush config:set system.file path.temporary sites/default/files/temp -y
             sudo -u www-data vendor/bin/drush updatedb -y
-            sudo -u www-data vendor/bin/drush config:import -y || echo "No config import."
+            if [ -d config/sync ] && [ "$(ls -A config/sync)" ]; then
+              sudo -u www-data vendor/bin/drush config:import -y
+            else
+              echo "⚠️ No config found to import, skipping."
+            fi
             sudo -u www-data vendor/bin/drush cache:rebuild -y
