--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
 
           rsync -avz --delete \
           --exclude 'web/sites/default/files' \
+          --exclude 'config/sync' \
           --exclude '.git' \
           --exclude '.env' \
           --exclude 'node_modules' \
