--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,6 @@ HASH_SALT=
 PROD=
 
 
-NME_API_URL=https://www.nme.com/wp-json/wp/v2/posts/
+NME_API_URL=
 NME_CACHE_DURATION=
 NME_ARTICLES_PER_PAGE=
