--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           --exclude '.git' \
           --exclude '.env' \
           --exclude 'node_modules' \
-          --exc;ide 'vendor' \
+          --exclude 'vendor' \
           -e "ssh -i ~/.ssh/id_rsa" \
           ./ ubuntu@${{ secrets.EC2_HOST }}:/var/www/mysite
 
