--- a/web/modules/custom/nme_news/nme_news.info.yml
+++ b/web/modules/custom/nme_news/nme_news.info.yml
@@ -1,7 +1,7 @@
 name: "NME News"
 type: module
 description: "Fetch and displays latest news from NME News API"
-core_version_requirement: ^11
+core_version_requirement: ^10 || ^11
 package: Custom
 dependencies:
   - drupal:system
