updated cicd file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.3"
+
+      - name: Install Composer dependencies
+        run: composer install --no-dev --optimize-autoloader
+
       - name: Rsync files to EC2
         run: |
           mkdir -p ~/.ssh
@@ -26,7 +34,6 @@ jobs:
           --exclude '.git' \
           --exclude '.env' \
           --exclude 'node_modules' \
-          --exclude 'vendor' \
           -e "ssh -i ~/.ssh/id_rsa" \
           ./ ubuntu@${{ secrets.EC2_HOST }}:/var/www/mysite
 
@@ -38,24 +45,28 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /var/www/mysite
-
-            # Install composer deps on server
             composer install --no-dev --optimize-autoloader
 
             # Ensure writable dirs exist
-            sudo mkdir -p web/sites/default/files/{css,js,php,temp}
+            sudo mkdir -p web/sites/default/files/css \
+                        web/sites/default/files/js \
+                        web/sites/default/files/php \
+                        web/sites/default/files/temp
 
-            # File/folder permissions
+            # Fix ownership and permissions
             sudo chown -R www-data:www-data web/sites/default/files
             sudo find web/sites/default/files -type d -exec chmod 775 {} \;
             sudo find web/sites/default/files -type f -exec chmod 664 {} \;
 
-            # Clean caches
+            # Optional: clean up old caches before Drush runs
             sudo -u www-data rm -rf web/sites/default/files/css/* web/sites/default/files/js/* || true
 
-            # Drupal tasks
+            # Drupal tasks (as www-data for safety)
+            sudo -u www-data vendor/bin/drush config:set system.file path.temporary sites/default/files/temp -y
             sudo -u www-data vendor/bin/drush updatedb -y
             if [ -d config/sync ] && [ "$(ls -A config/sync)" ]; then
               sudo -u www-data vendor/bin/drush config:import -y
+            else
+              echo "⚠️ No config found to import, skipping."
             fi
             sudo -u www-data vendor/bin/drush cache:rebuild -y
