--- a/web/themes/custom/nme_theme/nme_theme.info.yml
+++ b/web/themes/custom/nme_theme/nme_theme.info.yml
@@ -1,7 +1,7 @@
 name: "NME Theme"
 type: theme
 description: "Custom theme for NME News with Tailwind CSS"
-core_version_requirement: ^11
+core_version_requirement: ^10 || ^11
 base theme: false
 libraries:
   - nme_theme/global-styling
