--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-project-message": "^11.2",
         "drupal/core-recipe-unpack": "^11.2",
         "drupal/core-recommended": "^11.2",
+        "drupal/raven": "^7.3",
         "drush/drush": "^13.6",
         "vlucas/phpdotenv": "^5.6"
     },
