--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,9 @@
 [phases.setup]
-apt_pkgs = ["libfreetype6-dev", "libjpeg62-turbo-dev", "libpng-dev"]
+apt_pkgs = [
+  "libfreetype6-dev",
+  "libjpeg62-turbo-dev",
+  "libpng-dev"
+]
 
 [phases.build]
 cmds = [
